# servier

./: .gitignore  README.md  pyproject.toml
services/drug-publication-pipeline/: README.md  pyproject.toml
services/drug-publication-pipeline/input/: clinical_trials.csv
services/drug-publication-pipeline/output/: drug_mentions_in_publications.json  drug_publication_references.json
services/drug-publication-pipeline/src/ad_hoc/: main.py
services/drug-publication-pipeline/src/drug_publication_pipeline/: data_export.py  data_loader.py  data_processor.py  main.py  pipeline.py  settings.py  utils.py
services/drug-publication-pipeline/src/drug_publication_pipeline/dags/: pipeline.py
services/drug-publication-pipeline/src/drug_publication_pipeline/schemas/: clinical_trial.py  drug.py  pubmed.py
services/drug-publication-pipeline/src/drug_publication_pipeline/workflow/: data_extract.py  data_load.py
services/drug-publication-pipeline/src/drug_publication_pipeline/workflow/data_transform/: drug_mention_mapper.py  validators.py
services/drug-publication-pipeline/tests/: conftest.py
services/drug-publication-pipeline/tests/drug_publication_pipeline/schemas/: test_drug.py
services/drug-publication-pipeline/tests/drug_publication_pipeline/workflow/: test_data_extract.py  test_data_load.py
services/drug-publication-pipeline/tests/drug_publication_pipeline/workflow/data_transform/: test_drug_mention_mapper.py  test_validators.py
