[project]
name = "servier"
version = "0.1.0"
description = ""
authors = [
    {name = "Yves OUATTARA",email = "yves.ouattara.ext@veolia.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
