[project]
name = "drug-publication-pipeline"
version = "0.1.0"
description = "Drug Publication Data Pipeline"
authors = [
    {name = "Yves OUATTARA",email = "yves.ouattara.ext@veolia.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "drug_publication_pipeline", from = "src"}]


[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.2.0"
pylint = "^3.3.7"
mypy = "^1.16.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
